--- a/source/_posts/blog/2015end.md
+++ b/source/_posts/blog/2015end.md
@@ -5,21 +5,19 @@ tags: talk
 
 最近琢磨写点什么总结一下过去的一年，无奈想做得太多，时间太少。现在补上，随便聊一聊这一年。
 
-年初时候我在创业公司干的好好的，突然就发生了变故，说来也算不得“突然”，我从3月份开始就渐渐感受到这寒冬将至，可毕竟在北京漂的浅，虽然看过很多世态炎凉，这遭也自己也亲身体验了一把。某个雾霾天的午休，同事们在楼下饭馆吃饭，CEO跟我对桌而坐，似有深意地跟我聊起来国际象棋的开局方法。我简单应和两句，因为之前闲聊时，我说自己也要跟大家一块学学象棋，只是后来实在没什么兴致。初春的心境像柳絮一样飘忽，身陷一堆琐事中，哪有多余的心思。CEO看出来我心不在焉，表情很不自在的沉下去。我抬眼看了一下，觉得自己这样不好，但也没意识到什么不对。
+年初时候我在创业公司干的好好的，突然就发生了变故，说来也算不得“突然”，我从3月份开始就渐渐感受到寒冬将至，可毕竟在北京漂的浅，虽然看过很多世态炎凉，这遭也自己也亲身体验了一把。某个雾霾天的午休，同事们在楼下饭馆吃饭，CEO跟我对桌而坐，似有深意地跟我聊起来国际象棋的开局方法。我简单应和两句，因为之前闲聊时，我说自己也要跟大家一块学学象棋，只是后来实在没什么兴致。初春的心境像柳絮一样飘忽，身陷一堆琐事中，哪有多余的心思。CEO看出来我心不在焉，表情很不自在的沉下去。我抬眼看了一下，觉得自己这样不好，但也没意识到有什么不对。
 
-小气这个词儿，一般是从下自上说的，比如一个富豪从来不会说穷人小气，只有贫富差距中弱势的一方才会用“小气”来形容强势的一方……但有时候精神上的小气，却是富有的一方形容贫瘠的一方。我在按部就班中感到自己被慢慢隔离，直到有一天突然发现跟我关系近的同事都因为种种原因离职了，我这才醒悟过来之前压抑的气氛原来是某位合伙人排除异己的冲锋号。我觉得身为创业者，具有洞察人心的能力是一种天份。但是可惜这家黑客至上的公司，过于滥用这份天份了。于是一来二去，很多人就自行离职了。我在惶惶中也慢慢被逼到了无路可走。临走时副总问我对公司有什么意见吗，我说挺好的。他又让我跟同事告别，我心想，该告别的人这几个月都告别过了……我就说，不了，我怕场面比较尴尬。
+小气这个词儿，一般是自下而上说的，比如一个富豪从来不会说穷人小气，只有贫富差距中弱势的一方才会用“小气”来形容强势的一方……但有时候精神上的小气，却是富有的一方形容贫瘠的一方。我在按部就班中感到自己被慢慢隔离，直到有一天突然发现跟我关系近的同事都因为种种原因离职了，我这才醒悟过来之前压抑的气氛原来是某位合伙人排除异己的冲锋号。我觉得身为创业者，具有洞察人心的能力是一种天份。但是可惜这家黑客至上的公司，过于滥用这份天份了。于是一来二去，很多人就自行离职了。我在惶惶中也慢慢被逼到了无路可走。临走时副总问我对公司有什么意见吗，我说挺好的。他又让我跟同事告别，我心想，该告别的人这几个月都告别过了……我就说，不了，我怕场面比较尴尬。
 
-我想起不知哪位作家的话，“任何灵魂都是孤独行走在这世上”。同处一片迷雾中，没人会提醒你周遭发生了什么，只有自己感觉到疼了，才能开始意识到发生了什么。
+我想起不知哪位作家的话，“任何灵魂都是孤独行走在这世上”。
 
-至于后来的事儿，呵呵。
-
-除了工作的颠沛，个人生活也开始发生变化。4月清明，同大伟偷闲去了趟扬州，顺路在南京歇脚，游览下秦淮河。时值江南蒙蒙细雨，马头墙高耸，青砖绿瓦，行人从容撑伞，地铁里学生模样的少男少女哄笑玩闹。在一天夜晚，愉快地地步行了几公里返回旅馆，我跟大伟聊到了健身，我说我也要学习大伟哥，回北京就抓紧锻炼，大伟哥看着我们刚拍的合影，皱着眉说你确实该练练，都有中年人的体态了。我笑着说是，心里有点波动……
+除了工作的颠沛，个人生活也开始发生变化。4月清明，同大伟偷闲去了趟扬州，顺路在南京歇脚，游览下秦淮河。时值江南蒙蒙细雨，马头墙高耸，青砖黑瓦，行人从容撑伞，地铁里学生模样的少男少女哄笑玩闹。在一天夜晚，愉快地地步行了几公里返回旅馆，我跟大伟聊到了健身，我说我也要学习大伟哥，回北京就抓紧锻炼，大伟哥看着我们刚拍的合影，皱着眉说你确实该练练，都有中年人的体态了。我笑着说是，心里有点波动……
 
 就这样，从4月份开始，我开始断断续续的健身。体重一点点掉，心情也一点点好。加上新公司下班早，也开始练练慢跑。新教练非常可爱，人很好，但是训练起来却十分严格，三十次高抬腿，少一次就重新做。几周功夫大腿就有力不少，5公里也轻松跑下来。健身就是这样，越是痛苦的时候，越是唤起肌肉生长欲望的时候。记得一本书上提到拳王阿里的一句话，“只有开始疼了，我才开始计数”。
 
-8月离职后，我和母亲去秦皇岛闲待几日。无奈上天作弄，刚到秦皇岛就崴脚了，坐在游船上母亲看着我扭曲的脸，着急得直冒汗。就这样我在秦皇岛大部分时间是躺在旅店里看电视……可是我还是发了微信，晒了一下我出游的照片昭告朋友圈。然后把不痛快都发泄到新浪微博，再隔天删掉。微信神奇的地方就在于，你不得不把最好的一面朝向亲朋好友，可能因为“点赞”只需要按一下，安慰的话却需要想半天。
+8月离职后，我和母亲去秦皇岛闲待几日。无奈上天作弄，刚到秦皇岛就崴脚了，坐在游船上母亲看着我扭曲的脸，着急得直冒汗。就这样我在秦皇岛大部分时间是躺在旅店里看电视……可是我还是发了微信，晒了一下我出游的照片昭告朋友圈。然后把不痛快都发泄到新浪微博，再隔天删掉。微信神奇的地方就在于，你不得不把最好的一面朝向亲朋好友，“点赞”只需要按一下，安慰的话却需要想半天。
 
-中国人总能把各种传统节日过成美食节，把西方节日过成情人节。眼看还有一个月圣诞节，我也与时俱进追求了一个女生，准备趁乱告别单身……后来的事就不言自明了，如果成了，以我的性格肯定不会藏着掖着。我跟大伟说起这事儿，他淡定表达了同情，并说自己最近也有相似的经历，我惊讶于他心态如此之好的同时，意识到大伟哥如果不是gay，就一定有铁一般的意志力。这更加深了我健身的热情，我想看看到底是怎样的力量能让大伟哥如此看破红尘。
+中国人总能把各种传统节日过成美食节，把西方节日过成情人节。眼看还有一个月圣诞，我也与时俱进追求了一个女生，准备趁乱告别单身……后来的事就不言自明了，如果成了，以我的性格肯定不会藏着掖着。我跟大伟说起这事儿，他淡定表达了同情，并说自己最近也有相似的经历，我惊讶于他心态如此之好的同时，意识到大伟哥如果不是gay，就一定有铁一般的意志力。这更加深了我健身的热情，我想看看到底是怎样的力量能让大伟哥看破红尘。
 
 直到最近我才发觉了一个未曾注意的事实，孤独是对亲密关系的渴望，而独处却是为了对抗孤独而自我选择的生活方式。孤独并不快乐，独处却可以。我读了村上春树著名的“跑步书”，感觉有一种似曾相识的力量在燃烧。我听教练的话把每周1-2次健身改为3-5次，把闲暇的时间统统用来做让自己快乐的事儿。我察觉到让自己不快乐的原因正是追逐了错误的东西。解决一切问题的本质，都是让自己变得更好。快意人生，何须忧虑。
 
