--- a/source/_posts/blog/2015end.md
+++ b/source/_posts/blog/2015end.md
@@ -5,6 +5,8 @@ tags: talk
 
 最近琢磨写点什么总结一下过去的一年，无奈想做得太多，时间太少。现在补上，随便聊一聊这一年。
 
+<!--more-->
+
 年初时候我在创业公司干的好好的，突然就发生了变故，说来也算不得“突然”，我从3月份开始就渐渐感受到寒冬将至，可毕竟在北京漂的浅，虽然看过很多世态炎凉，这遭也自己也亲身体验了一把。某个雾霾天的午休，同事们在楼下饭馆吃饭，CEO跟我对桌而坐，似有深意地跟我聊起来国际象棋的开局方法。我简单应和两句，因为之前闲聊时，我说自己也要跟大家一块学学象棋，只是后来实在没什么兴致。初春的心境像柳絮一样飘忽，身陷一堆琐事中，哪有多余的心思。CEO看出来我心不在焉，表情很不自在的沉下去。我抬眼看了一下，觉得自己这样不好，但也没意识到有什么不对。
 
 小气这个词儿，一般是自下而上说的，比如一个富豪从来不会说穷人小气，只有贫富差距中弱势的一方才会用“小气”来形容强势的一方……但有时候精神上的小气，却是富有的一方形容贫瘠的一方。我在按部就班中感到自己被慢慢隔离，直到有一天突然发现跟我关系近的同事都因为种种原因离职了，我这才醒悟过来之前压抑的气氛原来是某位合伙人排除异己的冲锋号。我觉得身为创业者，具有洞察人心的能力是一种天份。但是可惜这家黑客至上的公司，过于滥用这份天份了。于是一来二去，很多人就自行离职了。我在惶惶中也慢慢被逼到了无路可走。临走时副总问我对公司有什么意见吗，我说挺好的。他又让我跟同事告别，我心想，该告别的人这几个月都告别过了……我就说，不了，我怕场面比较尴尬。
