--- a/source/_posts/2016-12-28-1.md
+++ b/source/_posts/2016-12-28-1.md
@@ -5,7 +5,7 @@ categories: python
 tags: python
 ---
 
-这几天面试被问到类似的问题，顺便看了看CPython的源码，参考网上的教程，总结一下yield关键字在CPython层面是如何实现的。
+这几天面试被问到类似的问题，顺便看了看Python的源码，参考网上的教程，总结一下yield关键字在C层面是如何实现的。
 
 <!--more-->
 
@@ -42,7 +42,7 @@ a.next()
              16 LOAD_CONST               0 (None)
              19 RETURN_VALUE      
 ```
-我们猜测其中第二列(代表字节码偏移量)为10的指令`YIELD_VALUE`就是yield关键字的执行代码，进入Python2.7.12源码目录，在解释器执行字节码的主函数`PyEval_EvalFrameEx`中找到了下面一段：
+我们猜测其中第二列(代表字节码偏移量)为9的指令`YIELD_VALUE`就是yield关键字的执行代码，进入Python2.7.12源码目录，在解释器执行字节码的主函数`PyEval_EvalFrameEx`中找到了下面一段：
 
 
 ```c
