--- a/source/_posts/2016-12-28.md
+++ b/source/_posts/2016-12-28.md
@@ -3,6 +3,6 @@ date: 2016-12-28 10:00:00
 categories: others
 ---
 
-2017年1月开始，我的老域名`v2steve.com`将停用，买了10年期的新域名`sund.site`。
+2017年1月开始，我的老域名`v2steve.com`将停用，买了10年期的新域名`sund.site`即将上线使用。
 
-
+<!--more-->
